--- a/Proyecto CV/index.html
+++ b/Proyecto CV/index.html
@@ -16,11 +16,12 @@
                 </div>
                 <div class="nombre">
                     <h1>Edgar Ellis</h1>
-                    <p><b>Dirección:</b>5910 W Pecan St
-                    <br>
-                    <b>Telefono:</b>(596) 748-9903  -  <b>Email:</b>edgar.ellis@example.com
-                    </p>
-                </div>
+                    <ul>
+                        <li><b>Dirección:</b>5910 W Pecan St</li>
+                        <li><b>Telefono:</b>(596) 748-9903</li>
+                        <li><b>Email:</b>edgar.ellis@example.com</li>
+                    </ul>
+                   </div>
             </div>
         </div>
     <div class="navegacion"> <b>Contenido:</b>
@@ -35,12 +36,16 @@
         <h2 class="titulo">Experiencia Laboral</h2>
         <ul>
             <li>05/2003 – Actualidad (Freelance): Soporte nivel 2 de equipamiento informático</li>
+                <span class="hideText">
                 <p>Soporte Celulares, reparación, mantenimiento notebooks, Tablet, instalación de 
                 sistemas operativos. Software en general. Backups, recupero de discos, clonación 
                 discos, armado rigs minería, pcs (gamers, oficina)
                 Domótica (enchufes, luces, sensores, cámaras inteligentes, automatización, rutinas, 
                 asistentes virtuales)</p>
+                </span>
+                <button class="read-more-btn" id="hideText_btn">Mas</button>
             <li>09/2006 – 10/2021: Editorial Perfil S.A.</li>
+                <span class="hideText">
                 <p>Responsable de soporte técnico MDA, L1, L2, usuarios VIP y resto de compañía. 
                 Administración de infraestructura de red.
                 Solución de problemas de Pc's, computadoras portátiles y dispositivos móviles
@@ -51,15 +56,23 @@
                 Migración de sistemas operativos.
                 Rollout de equipos.
                 Responsable del funcionamiento de la sala de conferencia (micro cine, telefonía)</p>
+                </span>
+                <button class="read-more-btn" id="hideText_btn">Mas</button>
             <li>09/2003 – 08/2006: S.A. Establecimientos Vitivinícolas Escorihuela.</li>
+                <span class="hideText">
                 <p>Carga de Pedidos, Facturación, Atención Telefónica a Clientes, confección de recibos, 
                     Tareas Administrativas en General. 
                     Soporte Técnico PC’s. 
                     Soporte a Usuarios.</p>
+                </span>
+                <button class="read-more-btn" id="hideText_btn">Mas</button>
             <li>09/1999 – 09/2002: Pricewaterhouse & Co.</li>
+                <span class="hideText">
                 <p>Ayudante Auditor Sistemas (Auditorias y Revisión de sistemas, TRMs, Controles TI, 
                     Penetration Testing, Revisión de sistemas y seguridad, redes, soporte de sistemas y 
                     otras actividades referidas a controles de auditoria en distintas empresas).</p>
+                </span>
+                <button class="read-more-btn" id="hideText_btn">Mas</button>
         </ul>
         
     </div>
@@ -91,7 +104,7 @@
             <li>Inglés (Intermedio)</li>
         </ul>
     </div>
-
+<script src="js/function.js"></script>
     
 </body>
 </html>
